# nanofq

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  RENDME.md  main.cpp
doc/: example.stats.tsv  example.summary.txt
scripts/: plot.py
src/: Adapter.h  Alignment.cpp  Alignment.h  AlignmentConfig.cpp  AlignmentConfig.h  AlignmentResult.cpp  AlignmentResult.h  ArgumentParse.cpp  ArgumentParse.h  FastqReader.cpp  FastqReader.h  NanoBgzip.cpp  NanoBgzip.h  Read.cpp  Read.h  Read.hpp  SequenceInfo.cpp  SequenceInfo.h  ThreadPool.h  Timer.hpp  Work.cpp  Work.h  alignment.rs  all_test.rs  amplicon.rs  amplicons.rs  argparse.h  arguments.rs  bam.rs  fastq.rs  fastq2.rs  filter.rs  input_type.rs  kseq.h  main.rs  myUtility.cpp  myUtility.h  parse_arguments.cpp  parse_arguments.h  primer_barcode.rs  (+11 more)
src/alignment/: mod.rs  pairwise_align.rs
src/amplicons/: _consensus.rs  classsify_reads.rs  collect_reads.rs  draft_consensus.rs  mod.rs  preprocess.rs
src/py_scripts/: make_adapter_rs.py  make_plot.py
src/trim/: adapter.rs  mod.rs
