[package]
name = "nanofq"
version = "0.2.1"
edition = "2024"
authors = ["aadali <aaaliyin@gmail.com>"]
rust-version = "1.85.0"
homepage = "https://github.com/aadali/nanofq"
repository = "https://github.com/aadali/nanofq"
license = "GPL-3"

[dependencies]
rayon = "1.10.0"
flate2 = {version = "1.1.2", features = ["zlib-rs"]}
clap = { version = "4.5.38", features = ["wrap_help"] }
anyhow = "1.0.98"
ansi_term = "0.12.1"
seq_io = "0.3.4"
uuid = {version = "1.17.0", features = ["v4"]}
bio = "2.3.0"
rust-htslib = "0.51.0"